LIN-3444/LIN-4091 Add UUID tracking to error reporting
Change-Id: I1281fee86df750fa46dd7adc10c7aa6345d09b80